[gd_scene load_steps=2 format=3 uid="uid://vjaodanknr7h"]

[ext_resource type="Script" path="res://script/menu.gd" id="1_jl430"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jl430")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -50.5
offset_right = 45.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Campagne" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
text = "Campagne"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Campagne")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Campagne" to="." method="_on_campagne_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
